<resources>
    <string name="app_name">Credit Card App</string>
    <string name="app_title">Your Payment Options</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="payment_method">Payment Method</string>
    <string name="expiry_mnth">Exp. Month</string>
    <string name="expiry_year">Exp. Year</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="address">Address</string>
    <string name="cvv">CVV</string>
    <string name="title_activity_my">MyActivity</string>
</resources>
